--- a/r5dev/gamesdk.vcxproj.filters
+++ b/r5dev/gamesdk.vcxproj.filters
@@ -145,6 +145,9 @@
     <Filter Include="sdk\tier2">
       <UniqueIdentifier>{9da19829-c065-4584-9cf2-af751fb0d060}</UniqueIdentifier>
     </Filter>
+    <Filter Include="thirdparty\protobuf">
+      <UniqueIdentifier>{69f89031-0a48-4c3c-9ca8-c9a46f420e67}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="client\client.cpp">
@@ -437,6 +440,12 @@
     </ClCompile>
     <ClCompile Include="engine\net.cpp">
       <Filter>sdk\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="protoc\cl_rcon.pb.cc">
+      <Filter>thirdparty\protobuf</Filter>
+    </ClCompile>
+    <ClCompile Include="protoc\sv_rcon.pb.cc">
+      <Filter>thirdparty\protobuf</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1108,6 +1117,12 @@
     </ClInclude>
     <ClInclude Include="engine\net.h">
       <Filter>sdk\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="protoc\cl_rcon.pb.h">
+      <Filter>thirdparty\protobuf</Filter>
+    </ClInclude>
+    <ClInclude Include="protoc\sv_rcon.pb.h">
+      <Filter>thirdparty\protobuf</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
