--- a/r5dev/dedicated.vcxproj
+++ b/r5dev/dedicated.vcxproj
@@ -207,6 +207,7 @@
     <ClInclude Include="engine\sys_engine.h" />
     <ClInclude Include="engine\sys_utils.h" />
     <ClInclude Include="launcher\IApplication.h" />
+    <ClInclude Include="launcher\prx.h" />
     <ClInclude Include="mathlib\adler32.h" />
     <ClInclude Include="mathlib\bits.h" />
     <ClInclude Include="mathlib\color.h" />
@@ -406,6 +407,7 @@
     <ClCompile Include="engine\sys_engine.cpp" />
     <ClCompile Include="engine\sys_utils.cpp" />
     <ClCompile Include="launcher\IApplication.cpp" />
+    <ClCompile Include="launcher\prx.cpp" />
     <ClCompile Include="mathlib\adler32.cpp" />
     <ClCompile Include="mathlib\bits.cpp" />
     <ClCompile Include="mathlib\crc32.cpp" />
