--- a/r5dev/gamesdk.vcxproj
+++ b/r5dev/gamesdk.vcxproj
@@ -36,6 +36,8 @@
     <ClCompile Include="engine\baseclient.cpp" />
     <ClCompile Include="engine\baseclientstate.cpp" />
     <ClCompile Include="engine\cl_rcon.cpp" />
+    <ClCompile Include="engine\common.cpp" />
+    <ClCompile Include="engine\gl_screen.cpp" />
     <ClCompile Include="engine\host_cmd.cpp" />
     <ClCompile Include="engine\host_state.cpp" />
     <ClCompile Include="engine\net.cpp" />
@@ -54,6 +56,7 @@
     <ClCompile Include="mathlib\crc32.cpp" />
     <ClCompile Include="mathlib\IceKey.cpp" />
     <ClCompile Include="mathlib\sha256.cpp" />
+    <ClCompile Include="networksystem\pylon.cpp" />
     <ClCompile Include="networksystem\r5net.cpp" />
     <ClCompile Include="protoc\cl_rcon.pb.cc">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
@@ -214,7 +217,8 @@
     <ClCompile Include="tier1\NetAdr2.cpp" />
     <ClCompile Include="tier2\socketcreator.cpp" />
     <ClCompile Include="vguimatsurface\MatSystemSurface.cpp" />
-    <ClCompile Include="vgui\CEngineVGui.cpp" />
+    <ClCompile Include="vgui\vgui_baseui_interface.cpp" />
+    <ClCompile Include="vgui\vgui_debugpanel.cpp" />
     <ClCompile Include="vgui\vgui_fpspanel.cpp" />
     <ClCompile Include="vpc\basefilesystem.cpp" />
     <ClCompile Include="vpc\IAppSystem.cpp" />
@@ -246,9 +250,13 @@
     <ClInclude Include="engine\baseclient.h" />
     <ClInclude Include="engine\baseclientstate.h" />
     <ClInclude Include="engine\cl_rcon.h" />
+    <ClInclude Include="engine\cmodel_bsp.h" />
+    <ClInclude Include="engine\common.h" />
     <ClInclude Include="engine\debugoverlay.h" />
+    <ClInclude Include="engine\gl_screen.h" />
     <ClInclude Include="engine\host_cmd.h" />
     <ClInclude Include="engine\host_state.h" />
+    <ClInclude Include="engine\modelloader.h" />
     <ClInclude Include="engine\net.h" />
     <ClInclude Include="engine\net_chan.h" />
     <ClInclude Include="engine\sv_main.h" />
@@ -272,6 +280,7 @@
     <ClInclude Include="mathlib\swap.h" />
     <ClInclude Include="mathlib\vector.h" />
     <ClInclude Include="milessdk\win64_rrthreads.h" />
+    <ClInclude Include="networksystem\pylon.h" />
     <ClInclude Include="networksystem\r5net.h" />
     <ClInclude Include="networksystem\serverlisting.h" />
     <ClInclude Include="networksystem\sm_protocol.h" />
@@ -440,7 +449,8 @@
     <ClInclude Include="tier1\NetAdr2.h" />
     <ClInclude Include="tier2\socketcreator.h" />
     <ClInclude Include="vguimatsurface\MatSystemSurface.h" />
-    <ClInclude Include="vgui\CEngineVGui.h" />
+    <ClInclude Include="vgui\vgui_baseui_interface.h" />
+    <ClInclude Include="vgui\vgui_debugpanel.h" />
     <ClInclude Include="vgui\vgui.h" />
     <ClInclude Include="vgui\vgui_fpspanel.h" />
     <ClInclude Include="vpc\basefilesystem.h" />
