Update config files

--- a/r5dev/resource/cfg/autoexec_client_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_client_dev.cfg
@@ -36,11 +36,6 @@ cl_consoleoverlay_lines      "5"               // Num log lines for RUI console 
 cl_consoleoverlay_offset_x   "10"              // RUI console overlay 'X' offset.
 cl_consoleoverlay_offset_y   "535"             // RUI console overlay 'Y' offset.
 
-cl_consoleoverlay_native_clr "255 255 255 255" // Native RUI console overlay log color.
-cl_consoleoverlay_server_clr "130 120 245 255" // Server script VM RUI console overlay log color.
-cl_consoleoverlay_client_clr "117 116 139 255" // Client script VM RUI console overlay log color.
-cl_consoleoverlay_ui_clr     "200 110 110 255" // UI script VM RUI console overlay log color.
-
 phys_showObjectCount         "1"               // Shows physics object count.
 rui_defaultDebugFontFace     "ArameMono"       // Sets the RUI debug font face.
 hitch_alert_color            "255 000 000 255" // Sets the RUI hitch alert font color.
@@ -59,5 +54,6 @@ cl_ent_absbox                "1"               // Display entity abs boxes.
 //// MATSYS           ////
 //////////////////////////
 mat_showdxoutput             "1"               // Shows debug information from the DirectX hook system.
+gl_clear_color_buffer        "1"               // Enable or disable the clearing of the main color buffer.
 //mat_sync_rt                  "1"               // Enable to debug render threads more easily (!slower!).
 //mat_sync_rt_flushes_gpu      "1"               // Enable to debug render threads more easily (!slower!).
