--- a/r5dev/resource/cfg/autoexec_server_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_server_dev.cfg
@@ -15,3 +15,8 @@ base_tickinterval_mp         "0.0500" // Sets the num simulation frames per seco
 sv_showhitboxes              "1"      // Send server-side hitboxes for specified entity to client (!slower!).
 sv_showlagcompensation       "1"      // Show lag compensated hitboxes whenever a player is lag compensated (!slower!).
 sv_visualizetraces           "1"      // Show native and script related debug tracing (!slower!).
+
+//////////////////////////
+//// CAI              ////
+//////////////////////////
+ai_ainrebuildonmapstart      "2"       // Whether to rebuild the AIN graph on level load.
