--- a/r5dev/dedicated.vcxproj
+++ b/r5dev/dedicated.vcxproj
@@ -182,9 +182,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="bsplib\bsplib.h" />
+    <ClInclude Include="client\cdll_engine_int.h" />
     <ClInclude Include="client\client.h" />
     <ClInclude Include="client\IVEngineClient.h" />
     <ClInclude Include="common\igameserverdata.h" />
+    <ClInclude Include="common\netmessages.h" />
     <ClInclude Include="common\opcodes.h" />
     <ClInclude Include="common\protocol.h" />
     <ClInclude Include="common\psuedodefs.h" />
@@ -196,6 +198,7 @@
     <ClInclude Include="core\termutil.h" />
     <ClInclude Include="ebisusdk\EbisuSDK.h" />
     <ClInclude Include="engine\baseclient.h" />
+    <ClInclude Include="engine\cl_main.h" />
     <ClInclude Include="engine\cmodel_bsp.h" />
     <ClInclude Include="engine\common.h" />
     <ClInclude Include="engine\host_cmd.h" />
@@ -208,7 +211,9 @@
     <ClInclude Include="engine\sys_dll.h" />
     <ClInclude Include="engine\sys_dll2.h" />
     <ClInclude Include="engine\sys_engine.h" />
+    <ClInclude Include="engine\sys_getmodes.h" />
     <ClInclude Include="engine\sys_utils.h" />
+    <ClInclude Include="game\server\fairfight_impl.h" />
     <ClInclude Include="launcher\IApplication.h" />
     <ClInclude Include="launcher\prx.h" />
     <ClInclude Include="mathlib\adler32.h" />
@@ -240,6 +245,7 @@
     <ClInclude Include="squirrel\sqapi.h" />
     <ClInclude Include="squirrel\sqinit.h" />
     <ClInclude Include="squirrel\sqvm.h" />
+    <ClInclude Include="studiorender\studiorendercontext.h" />
     <ClInclude Include="thirdparty\detours\include\detours.h" />
     <ClInclude Include="thirdparty\detours\include\detver.h" />
     <ClInclude Include="thirdparty\detours\include\idetour.h" />
