--- a/r5dev/resource/cfg/rcon_client.cfg
+++ b/r5dev/resource/cfg/rcon_client.cfg
@@ -1,4 +1,4 @@
-////////////////// rcon_server configuration file.
+////////////////// rcon_client configuration file.
 // This file is executed automatically on startup.
 // See https://developer.valvesoftware.com/wiki/Source_RCON_Protocol for more information regarding RCON.
 // NOTE: This implementation is custom and differs slightly from Valve's implementation.
