--- a/r5dev/resource/cfg/rcon_server.cfg
+++ b/r5dev/resource/cfg/rcon_server.cfg
@@ -1,4 +1,4 @@
-////////////////// rcon_client configuration file.
+////////////////// rcon_server configuration file.
 // This file is executed automatically on startup.
 // See https://developer.valvesoftware.com/wiki/Source_RCON_Protocol for more information regarding RCON.
 // NOTE: This implementation is custom and differs slightly from Valve's implementation.
