--- a/r5dev/dedicated.vcxproj
+++ b/r5dev/dedicated.vcxproj
@@ -181,6 +181,8 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="appframework\engine_launcher_api.h" />
+    <ClInclude Include="appframework\iappsystem.h" />
     <ClInclude Include="bsplib\bsplib.h" />
     <ClInclude Include="client\cdll_engine_int.h" />
     <ClInclude Include="client\client.h" />
